[gd_scene load_steps=16 format=2]

[ext_resource path="res://arts/cars/car_1.png" type="Texture" id=1]
[ext_resource path="res://cars.gd" type="Script" id=2]
[ext_resource path="res://arts/cars/car_7.png" type="Texture" id=3]
[ext_resource path="res://arts/cars/car_9.png" type="Texture" id=4]
[ext_resource path="res://arts/cars/car_2.png" type="Texture" id=5]
[ext_resource path="res://arts/cars/car_4.png" type="Texture" id=6]
[ext_resource path="res://arts/cars/car_8.png" type="Texture" id=7]
[ext_resource path="res://arts/cars/car_11.png" type="Texture" id=8]
[ext_resource path="res://arts/cars/car_6.png" type="Texture" id=9]
[ext_resource path="res://arts/cars/car_12.png" type="Texture" id=10]
[ext_resource path="res://arts/cars/car_10.png" type="Texture" id=11]
[ext_resource path="res://arts/cars/car_3.png" type="Texture" id=12]
[ext_resource path="res://arts/cars/car_5.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "car2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "car6",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "car3",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "car1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "car8",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "car9",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "car10",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "car12",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "car7",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "car11",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "car5",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "car4",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 89.9996
height = 250.001

[node name="cars" type="KinematicBody2D" groups=["car"]]
script = ExtResource( 2 )

[node name="cars" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "car9"

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3, 0 )
scale = Vector2( 1.3, 0.95 )

[node name="detector" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="detector"]
position = Vector2( -3, -1 )
scale = Vector2( 1.21857, 0.883681 )
polygon = PoolVector2Array( 41.0316, -11.3163, 41.0316, 13.5796, 73.8569, 22.6326, 73.8569, -20.3693 )

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="detector" to="." method="_on_detector_area_exited"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
